# write2

./: .gitignore  CMakeLists.txt  premake5.lua
.cache/clangd/index/: SDL.c.45C5F57AB97FE992.idx  SDL.h.7A1E3653C1FFACCB.idx  SDL.h.C85868CF729435C6.idx  SDL_RLEaccel.c.500A963C96CB68A3.idx  SDL_RLEaccel_c.h.82C3DF331A2CB0EB.idx  SDL_appid.c.5F6BF947F333DCFD.idx  SDL_appid.h.C712C97642158BB4.idx  SDL_assert.c.6F78E78636886CE5.idx  SDL_assert.h.8D0B6423CB69775F.idx  SDL_assert.h.C465668985DDA06B.idx  SDL_assert_c.h.70ED83A29D7FA77C.idx  SDL_asyncio.c.A0310D68213EB3F4.idx  SDL_asyncio.h.9F6C826A12E22721.idx  SDL_asyncio.h.D1A4D07E1F126360.idx  SDL_asyncio_c.h.52F5C28EE7BAFCEA.idx  SDL_asyncio_generic.c.F68B052AE7145FAA.idx  SDL_atomic.c.0BDFD00E34D819CE.idx  SDL_atomic.h.3C8E350ADA384D9E.idx  SDL_atomic.h.DA2D88364B2656E2.idx  SDL_audio.c.624919D7B6A3D883.idx  SDL_audio.h.2C70EE19122C47DB.idx  SDL_audio.h.C3FF8CA363732E33.idx  SDL_audio_c.h.CC1BE23F3A3DAC76.idx  SDL_audio_channel_converters.h.EE4F866E0464E7AB.idx  SDL_audiocvt.c.2CB9E1185406DADE.idx  SDL_audiodev.c.4B33E84E8AC4BD1C.idx  SDL_audioqueue.c.8DB961E32A7B599C.idx  SDL_audioqueue.h.7BD2C37EEDE5DBD8.idx  SDL_audioresample.c.EC1CCCE95F40151C.idx  SDL_audioresample.h.2BBD5883BC922A5B.idx  SDL_audiotypecvt.c.7CC7FF7504B46614.idx  SDL_begin_code.h.87649CA74E57DF79.idx  SDL_begin_code.h.9D699722EB5094A0.idx  SDL_bits.h.9A9AEC5DA855E674.idx  (+634 more)
wapp/include/: Vec2.h  app.h  app_status.h  camera.h  canvas.h  line.h  toolbar.h
wapp/src/: app.cpp  app_status.cpp  camera.cpp  canvas.cpp  line.cpp  main.cpp  toolbar.cpp
